--- a/api/composer.json
+++ b/api/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "yiisoft/yii2": "~2.0.0",
     "ext-json": "*",
-    "vlucas/phpdotenv": "^5.2"
+    "vlucas/phpdotenv": "^5.2",
+    "asasmoyo/yii2-saml": "*"
   },
   "repositories": [
     {
